Created KB structure

--- a/DataWarehouseKnowledgeBase.Presentation/appsettings.json
+++ b/DataWarehouseKnowledgeBase.Presentation/appsettings.json
@@ -1,13 +1,14 @@
 {
     "ConnectionStrings": {
         "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-DataWarehouseKnowledgeBase.Presentation-A97A8255-5D4F-4674-9B3F-89082BED73EF;Trusted_Connection=True;MultipleActiveResultSets=true",
-        "DataWarehouses.Properties.Settings.SalesWarehouseConnectionString": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=D:\\7sem\\CourseWork\\DataWarehouseKnowledgeBase\\DB\\SalesWarehouse.mdf;Integrated Security=True",
-        "DataWarehouses.Properties.Settings.SalesDatabaseConnectionString": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=D:\\7sem\\CourseWork\\DataWarehouseKnowledgeBase\\DB\\SalesDatabase.mdf;Integrated Security=True"
+        "DataWarehouses.Properties.Settings.SalesWarehouseConnectionString": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=D:\\UCHYOBA\\7sem\\CourseWork\\DataWarehouseKnowledgeBase\\DB\\SalesWarehouse.mdf;Integrated Security=True",
+        "DataWarehouses.Properties.Settings.SalesDatabaseConnectionString": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=D:\\UCHYOBA\\7sem\\CourseWork\\DataWarehouseKnowledgeBase\\DB\\SalesDatabase.mdf;Integrated Security=True"
     },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "KbLocation": "D:\\UCHYOBA\\7sem\\CourseWork\\DataWarehouseKnowledgeBase\\KB\\KB_Test.xml",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
