--- a/DataWarehouseKnowledgeBase.DAL/DataWarehouseKnowledgeBase.DAL.csproj
+++ b/DataWarehouseKnowledgeBase.DAL/DataWarehouseKnowledgeBase.DAL.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="2.10.0" />
   </ItemGroup>
 
 </Project>
