--- a/DataWarehouseKnowledgeBase.Presentation/DataWarehouseKnowledgeBase.Presentation.csproj
+++ b/DataWarehouseKnowledgeBase.Presentation/DataWarehouseKnowledgeBase.Presentation.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="2.10.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" PrivateAssets="All" />
   </ItemGroup>
 
